--- a/vignettes/longevityTools_CMAP.html
+++ b/vignettes/longevityTools_CMAP.html
@@ -11,7 +11,7 @@
 <meta name="author" content="Authors: Tyler Backman, Dan Evans, Thomas Girke" />
 
 
-<title>longevityTools: Connecting Drug and Age related Gene Expression Signatures</title>
+<title>longevityTools: Connecting Drug- and Age-related Gene Expression Signatures</title>
 
 
 <style type="text/css">code{white-space: pre;}</style>
@@ -48,7 +48,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 
 <div id="header">
-<h1 class="title"><em>longevityTools</em>: Connecting Drug and Age related Gene Expression Signatures</h1>
+<h1 class="title"><em>longevityTools</em>: Connecting Drug- and Age-related Gene Expression Signatures</h1>
 <h4 class="author"><em>Authors: Tyler Backman, Dan Evans, Thomas Girke</em></h4>
 <h4 class="date"><em>Last update: 18 January, 2016</em></h4>
 </div>
