--- a/vignettes/longevityTools.html
+++ b/vignettes/longevityTools.html
@@ -129,7 +129,7 @@ vignette(&quot;longevityTools&quot;) # Opens vignette</code></pre>
 </div>
 <div id="overview-of-object-clases-methods-and-functions" class="section level2">
 <h2><span class="header-section-number">2.3</span> Overview of object clases, methods and functions</h2>
-<p>To be added later…</p>
+<p>To be continued…</p>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
