--- a/vignettes/longevityTools_CMAP.html
+++ b/vignettes/longevityTools_CMAP.html
@@ -69,7 +69,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <li><a href="#combine-results-from-same-chip-type-in-single-data-frame"><span class="toc-section-number">3.5</span> Combine results from same chip type in single data frame</a></li>
 </ul></li>
 <li><a href="#funding"><span class="toc-section-number">4</span> Funding</a></li>
-<li><a href="#version-informationr-sessioninfo-sessioninfo"><span class="toc-section-number">5</span> Version information<code>{r sessionInfo} sessionInfo()</code></a></li>
+<li><a href="#version-information"><span class="toc-section-number">5</span> Version information</a></li>
 </ul>
 </div>
 
@@ -188,8 +188,27 @@ combineResults(chiptype_dir, rerun=FALSE)</code></pre>
 <a href>Back to Table of Contents</a>
 </div>
 </div>
-<div id="version-informationr-sessioninfo-sessioninfo" class="section level1">
-<h1><span class="header-section-number">5</span> Version information<code>{r sessionInfo} sessionInfo()</code></h1>
+<div id="version-information" class="section level1">
+<h1><span class="header-section-number">5</span> Version information</h1>
+<pre class="r"><code>sessionInfo()</code></pre>
+<pre><code>## R version 3.2.2 (2015-08-14)
+## Platform: x86_64-pc-linux-gnu (64-bit)
+## Running under: CentOS Linux 7 (Core)
+## 
+## locale:
+## [1] C
+## 
+## attached base packages:
+## [1] stats     graphics  utils     datasets  grDevices methods   base     
+## 
+## other attached packages:
+## [1] ggplot2_2.0.0        longevityTools_1.0.0 BiocStyle_1.8.0     
+## 
+## loaded via a namespace (and not attached):
+##  [1] Rcpp_0.12.3      codetools_0.2-14 digest_0.6.9     plyr_1.8.3       grid_3.2.2      
+##  [6] gtable_0.1.2     formatR_1.2.1    magrittr_1.5     evaluate_0.8     scales_0.3.0    
+## [11] stringi_1.0-1    rmarkdown_0.9.2  tools_3.2.2      stringr_1.0.0    munsell_0.4.2   
+## [16] yaml_2.1.13      colorspace_1.2-6 htmltools_0.3    knitr_1.12</code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
