--- a/vignettes/longevityTools.html
+++ b/vignettes/longevityTools.html
@@ -50,7 +50,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="header">
 <h1 class="title"><em>longevityTools</em>: Analysis Tools for Longevity Research</h1>
 <h4 class="author"><em>Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
-<h4 class="date"><em>Last update: 18 January, 2016</em></h4>
+<h4 class="date"><em>Last update: 19 January, 2016</em></h4>
 </div>
 
 <h1>Contents</h1>
@@ -61,6 +61,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <li><a href="#installation"><span class="toc-section-number">2.1</span> Installation</a></li>
 <li><a href="#loading-package-and-documentation"><span class="toc-section-number">2.2</span> Loading package and documentation</a></li>
 <li><a href="#overview-of-object-clases-methods-and-functions"><span class="toc-section-number">2.3</span> Overview of object clases, methods and functions</a></li>
+<li><a href="#workflow-vignettes"><span class="toc-section-number">2.4</span> Workflow vignettes</a></li>
 </ul></li>
 <li><a href="#funding"><span class="toc-section-number">3</span> Funding</a></li>
 <li><a href="#version-information"><span class="toc-section-number">4</span> Version information</a></li>
@@ -133,6 +134,16 @@ vignette(&quot;longevityTools&quot;) # Opens vignette</code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
+</div>
+<div id="workflow-vignettes" class="section level2">
+<h2><span class="header-section-number">2.4</span> Workflow vignettes</h2>
+<p>Currently, this package includes the following analysis workflow vignettes:</p>
+<ul>
+<li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools.html">longevityDrugs</a>: overview vignette</li>
+<li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html">longevityDrugs_eQTL</a>: eQTL, eSNP and GWAS analysis</li>
+<li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html">longevityDrugs_CMAP</a>: connecting drug- and age-related gene expression signatures</li>
+<li>longevityTools_Drugs: coming soon</li>
+</ul>
 </div>
 </div>
 <div id="funding" class="section level1">
