--- a/vignettes/longevityTools.html
+++ b/vignettes/longevityTools.html
@@ -106,7 +106,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <p>Note: the GitHub repository of this package is <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this tutorial can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools.html">here</a>.</p>
 <div id="introduction" class="section level1">
 <h1><span class="header-section-number">1</span> Introduction</h1>
-<p>This vignette provides general information about the <code>longevityTools</code> package. This includes an introduction into the objects, data structures, methods and functions defined by <code>longevityTools</code>. The development of <code>longevityTools</code> is part of the <a href="http://www.longevitygenomics.org/">Longevity Genomics</a> project. The analysis workflows used by this project are documented in its companion vignettes listed below <span class="citation">(Lamb et al. 2006; M. J. Peters et al. 2015; Sood et al. 2015)</span>.</p>
+<p>This vignette provides general information about the <code>longevityTools</code> package. This includes an introduction into the objects, data structures, methods and functions defined by <code>longevityTools</code>. The development of <code>longevityTools</code> is part of the <a href="http://www.longevitygenomics.org/">Longevity Genomics</a> project. The analysis workflows used by this project are documented in its companion vignettes listed below.</p>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
@@ -127,11 +127,14 @@ biocLite(&quot;tgirke/longevityTools&quot;, build_vignettes=TRUE, dependencies=T
 <pre class="r"><code>library(&quot;longevityTools&quot;) # Loads the package
 library(help=&quot;longevityTools&quot;) # Lists package info
 vignette(&quot;longevityTools&quot;) # Opens vignette</code></pre>
+<div align="right">
+<a href>Back to Table of Contents</a>
+</div>
 </div>
 </div>
 <div id="overview-of-object-clases-methods-and-functions" class="section level1">
 <h1><span class="header-section-number">3</span> Overview of object clases, methods and functions</h1>
-<p>To be continued…</p>
+<p>To be continued… <span class="citation">(Lamb et al. 2006; M. J. Peters et al. 2015; Sood et al. 2015)</span>.</p>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
@@ -145,6 +148,9 @@ vignette(&quot;longevityTools&quot;) # Opens vignette</code></pre>
 <li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html">longevityDrugs_CMAP</a>: connecting drug- and age-related gene expression signatures</li>
 <li>longevityTools_Drugs: coming soon</li>
 </ul>
+<div align="right">
+<a href>Back to Table of Contents</a>
+</div>
 </div>
 <div id="funding" class="section level1">
 <h1><span class="header-section-number">5</span> Funding</h1>
