--- a/vignettes/longevityTools.html
+++ b/vignettes/longevityTools.html
@@ -143,9 +143,9 @@ vignette(&quot;longevityTools&quot;) # Opens vignette</code></pre>
 <h1><span class="header-section-number">4</span> Workflow vignettes</h1>
 <p>Currently, this package includes the following analysis workflow vignettes:</p>
 <ul>
-<li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools.html">longevityDrugs</a>: overview vignette</li>
-<li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html">longevityDrugs_eQTL</a>: eQTL, eSNP and GWAS analysis</li>
-<li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html">longevityDrugs_CMAP</a>: connecting drug- and age-related gene expression signatures</li>
+<li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools.html">longevityTools</a>: overview vignette</li>
+<li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html">longevityTools_eQTL</a>: eQTL, eSNP and GWAS analysis</li>
+<li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html">longevityTools_CMAP</a>: connecting drug- and age-related gene expression signatures</li>
 <li>longevityTools_Drugs: coming soon</li>
 </ul>
 <div align="right">
