--- a/vignettes/longevityTools_CMAP.html
+++ b/vignettes/longevityTools_CMAP.html
@@ -50,7 +50,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="header">
 <h1 class="title"><em>longevityTools</em>: Connecting Drug- and Age-related Gene Expression Signatures</h1>
 <h4 class="author"><em>Authors: Tyler Backman, Dan Evans, Thomas Girke</em></h4>
-<h4 class="date"><em>Last update: 18 January, 2016</em></h4>
+<h4 class="date"><em>Last update: 19 January, 2016</em></h4>
 </div>
 
 <h1>Contents</h1>
@@ -67,6 +67,10 @@ document.addEventListener("DOMContentLoaded", function() {
 <li><a href="#determine-chip-type-from-cel-files"><span class="toc-section-number">3.3</span> Determine chip type from CEL files</a></li>
 <li><a href="#normalization-of-cel-files"><span class="toc-section-number">3.4</span> Normalization of CEL files</a></li>
 <li><a href="#combine-results-from-same-chip-type-in-single-data-frame"><span class="toc-section-number">3.5</span> Combine results from same chip type in single data frame</a></li>
+<li><a href="#clean-up-of-intermediate-files"><span class="toc-section-number">3.6</span> Clean-up of intermediate files</a></li>
+<li><a href="#generate-list-of-cel-names-defining-treatment-vs.control-comparisons"><span class="toc-section-number">3.7</span> Generate list of CEL names defining treatment vs. control comparisons</a></li>
+<li><a href="#deg-analysis-with-limma"><span class="toc-section-number">3.8</span> DEG analysis with Limma</a></li>
+<li><a href="#load-normalized-expression-data"><span class="toc-section-number">3.9</span> Load normalized expression data</a></li>
 </ul></li>
 <li><a href="#funding"><span class="toc-section-number">4</span> Funding</a></li>
 <li><a href="#version-information"><span class="toc-section-number">5</span> Version information</a></li>
@@ -144,10 +148,13 @@ vignette(topic=&quot;longevityTools_CMAP&quot;, package=&quot;longevityTools&quo
 <p>Preliminary functions that are still under developement, or not fully tested and documented can be imported with the <code>source</code> command from the <code>inst/extdata</code> directory of the package.</p>
 <pre class="r"><code>fctpath &lt;- system.file(&quot;extdata&quot;, &quot;analysis_Fct.R&quot;, package=&quot;longevityTools&quot;)
 source(fctpath)</code></pre>
+<div align="right">
+<a href>Back to Table of Contents</a>
+</div>
 </div>
 <div id="download-data-from-connectivity-map-project-site" class="section level2">
 <h2><span class="header-section-number">3.2</span> Download data from Connectivity Map project site</h2>
-<p>The drug-related expression data are downloaded from the CMAP web site <a href="http://www.broadinstitute.org/cmap">here</a>. The <code>getCmap</code> function downloads the CMAP rank matrix along with the compound annotations, and <code>getCmapCEL</code> downloads the corresponding 7,056 CEL files. The functions will write the downloaded files to a <code>data</code> directory within the present workding directory of the user’s R session. This <code>data</code> directory plus a <code>data/CEL</code> sub-directory needs to be created by the user prior to running the download functions. Since some of the raw data sets are large, the following will only rerun the download if the argument <code>rerun</code> is assigned <code>TRUE</code>. If the raw data are not needed then users can skip this time consuming download step and work with the preprocessed data obtained in the next section.</p>
+<p>The drug-related expression data are downloaded from the CMAP web site <a href="http://www.broadinstitute.org/cmap">here</a>. The <code>getCmap</code> function downloads the CMAP rank matrix along with the compound annotations, and <code>getCmapCEL</code> downloads the corresponding 7,056 CEL files. The functions will write the downloaded files to a <code>data</code> directory within the present workding directory of the user’s R session. This <code>data</code> directory plus a <code>data/CEL</code> sub-directory need to be created by the user prior to running the download functions. Since some of the raw data sets are large, the functions will only rerun the download if the argument <code>rerun</code> is assigned <code>TRUE</code>. If the raw data are not needed then users can skip this time consuming download step and work with the preprocessed data obtained in the next section.</p>
 <pre class="r"><code>getCmap(rerun=FALSE) # Downloads cmap rank matrix and compound annotation files
 getCmapCEL(rerun=FALSE) # Download cmap CEL files. Note, this will take some time</code></pre>
 <div align="right">
@@ -170,6 +177,9 @@ saveRDS(chiptype, &quot;./data/chiptype.rds&quot;)</code></pre>
 <pre class="r"><code>library(BiocParallel); library(BatchJobs); library(affy)
 chiptype_list &lt;- split(names(chiptype), as.character(chiptype))
 normalizeCel(chiptype_list, rerun=FALSE) # Note: expect in pwd files torque.tmpl and .BatchJobs.R</code></pre>
+<div align="right">
+<a href>Back to Table of Contents</a>
+</div>
 </div>
 <div id="combine-results-from-same-chip-type-in-single-data-frame" class="section level2">
 <h2><span class="header-section-number">3.5</span> Combine results from same chip type in single data frame</h2>
@@ -178,6 +188,39 @@ combineResults(chiptype_dir, rerun=FALSE)</code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
+</div>
+<div id="clean-up-of-intermediate-files" class="section level2">
+<h2><span class="header-section-number">3.6</span> Clean-up of intermediate files</h2>
+<p>This deletes intermediate files. Before executing it, make sure that is what you want!</p>
+<pre class="r"><code># for(i in seq_along(chiptype_dir)) unlink(list.files(paste0(&quot;data/&quot;, chiptype_dir[i]), pattern=&quot;cellbatch&quot;, full.names=TRUE), recursive=TRUE)
+# unlink(&quot;data/CEL/&quot;) # Deletes downloaded CEL files</code></pre>
+<div align="right">
+<a href>Back to Table of Contents</a>
+</div>
+</div>
+<div id="generate-list-of-cel-names-defining-treatment-vs.control-comparisons" class="section level2">
+<h2><span class="header-section-number">3.7</span> Generate list of CEL names defining treatment vs. control comparisons</h2>
+<pre class="r"><code>cmap &lt;- read.delim(&quot;./data/cmap_instances_02.txt&quot;, check.names=FALSE) # Note: cmap_instances_02.xls converted to txt with LibreOffice
+# comp_list &lt;- sampleList(cmap, myby=&quot;CMP&quot;)
+comp_list &lt;- sampleList(cmap, myby=&quot;CMP_CELL&quot;)</code></pre>
+</div>
+<div id="deg-analysis-with-limma" class="section level2">
+<h2><span class="header-section-number">3.8</span> DEG analysis with Limma</h2>
+<pre class="r"><code>degMA &lt;- runLimma(df, comp_list, fdr=0.10, foldchange=1, verbose=TRUE)
+write.table(degMA, file=&quot;./results/degMA.xls&quot;, quote=FALSE, sep=&quot;\t&quot;, col.names = NA) </code></pre>
+<div align="right">
+<a href>Back to Table of Contents</a>
+</div>
+</div>
+<div id="load-normalized-expression-data" class="section level2">
+<h2><span class="header-section-number">3.9</span> Load normalized expression data</h2>
+<p>The following loads the MAS5 normalized expression data into a single <code>data.frame</code>. To spead up the import, <code>rds</code> files are used.</p>
+<pre class="r"><code>chiptype_dir &lt;- unique(readRDS(&quot;./data/chiptype.rds&quot;))
+df1 &lt;- readRDS(paste0(&quot;data/&quot;, chiptype_dir[1], &quot;/&quot;, &quot;all_mas5exprs.rds&quot;))
+df2 &lt;- readRDS(paste0(&quot;data/&quot;, chiptype_dir[2], &quot;/&quot;, &quot;all_mas5exprs.rds&quot;))
+df3 &lt;- readRDS(paste0(&quot;data/&quot;, chiptype_dir[3], &quot;/&quot;, &quot;all_mas5exprs.rds&quot;))
+affyid &lt;- rownames(df1)[rownames(df1) %in% rownames(df2)]; affyid &lt;- affyid[affyid %in% rownames(df3)]
+df &lt;- cbind(df1[affyid,], df2[affyid,], df3[affyid,])</code></pre>
 </div>
 </div>
 <div id="funding" class="section level1">
